--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/wonsama/transbot#readme",
   "dependencies": {
+    "dateformat": "^3.0.3",
     "google-translate-api": "^2.3.0",
     "steem": "^0.7.1",
     "striptags": "^3.1.1"
