--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/wonsama/transbot#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "dateformat": "^3.0.3",
     "google-translate-api": "^2.3.0",
     "steem": "^0.7.1",
