--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transbot",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "[transbot] steemit translation bot",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "dateformat": "^3.0.3",
+    "dotenv": "^6.0.0",
     "google-translate-api": "^2.3.0",
     "steem": "^0.7.1",
     "striptags": "^3.1.1"
